--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=F:\Verdant_OS\misc\Verdant_Icon.ico,0
+IconResource=C:\Users\Byte_\OneDrive\Pictures\byte_farm_icon.bmp,0
 [ViewState]
 Mode=
 Vid=
