add initial raspberry pi water pump control system implementation

--- a/rasp_pi/water/Dockerfile
+++ b/rasp_pi/water/Dockerfile
@@ -1,19 +1,22 @@
 # Use an official Python runtime as a parent image
 # Choose a specific slim version compatible with Raspberry Pi's ARM architecture
+# For example, for Python 3.11 on a Raspberry Pi 4 (ARMv7/ARM64):
 FROM python:3.11-slim-bullseye
 
 # Set the working directory in the container
 WORKDIR /app
 
-# Copy requirements first for better caching
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Copy the contents of the Sr directory (relative to the Dockerfile)
+# into the container's /app directory
+COPY .. /app/
 
-# Copy the application code
-COPY . .
+# If you have a requirements.txt file in your Sr directory, uncomment the next two lines:
+# COPY ./rasp_pi/requirements.txt /app/
+ RUN pip install --no-cache-dir -r requirements.txt
 
-# Expose the API port
-EXPOSE 8001
+# Command to run your application (replace your_app.py with your main script)
+ CMD ["python", "__main__.py"]
 
-# Command to run the pump API
-CMD ["uvicorn", "pump_api:app", "--host", "0.0.0.0", "--port", "8001"]
+
+# If you don't have a specific script to run, you can keep the container running for debugging:
+# CMD ["tail", "-f", "/dev/null"]
